Added endpoint to get users paginated and some license and package changes
